Fixing z-index on the arrows

--- a/css/diary-view.css
+++ b/css/diary-view.css
@@ -652,7 +652,7 @@ label.control-label {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1060;
+    z-index: 5000;
     display: none;
     max-width: 276px;
     padding: 1px;
